style what we do section

--- a/index.html
+++ b/index.html
@@ -67,10 +67,13 @@
         <!-- end hero/jumbotron -->
 
         <!-- "what we do" -->
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
-                butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOX
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, veniam asperiores 
+                possimus, ut velit sunt quas quae dignissimos quam vero sed adipisci assumenda 
+                voluptate est porro numquam molestiae provident sint. Butcher selfies chambray 
+                shabby chic gentrify readymade yr Echo Park XOX
             </p>
         </section>
 
