--- a/index.html
+++ b/index.html
@@ -110,48 +110,45 @@
 
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
-    <h2 class="section-title primary-border">
-      Meet The Trainers
-    </h2>
-
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
     <article class="trainer">
       <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
       <div class="trainer-bio text-left">
         <h3>Arron Stephens</h3>
         <h4>Speed / Strength</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Debitis distinctio sequi nisi odio? Soluta ipsa dolor illum 
-          accusamus harum ut, incidunt distinctio quasi quod debitis, 
-          iste fugiat blanditiis corporis fuga?
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
+
     <!-- second trainer bio -->
     <article class="trainer">
       <div class="trainer-bio text-right">
         <h3>Joanna Gill</h3>
         <h4>Endurance</h4>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Suscipit nisi porro vero deleniti veritatis, quos perferendis 
-          omnis enim id repellendus praesentium. Delectus numquam deleniti 
-          culpa, nesciunt dolor quia libero itaque.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
       <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
     </article>
 
+    <!-- third trainer bio -->
     <article class="trainer">
-      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
       <div class="trainer-bio text-left">
-        <h3>Harry "The Headband" Smith</h3>
-        <h4>Strenth</h4>
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-          Perspiciatis saepe veritatis velit, aspernatur voluptates 
-          voluptate quaerat a dolore ducimus nobis assumenda minima 
-          vero quasi in facilis, reprehenderit blanditiis, ipsum at.
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
         </p>
       </div>
     </article>
@@ -160,6 +157,31 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.5973018893187!2d-87.85752868523605!3d42.585069179172415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8805609e06e89f53%3A0x5ac8606e687f2b0a!2s5515%2039th%20Ave%2C%20Kenosha%2C%20WI%2053144!5e0!3m2!1sen!2sus!4v1614295714947!5m2!1sen!2sus" 
+        frameborder="0"
+        width="400" 
+        height="400" 
+        style="border:0;" 
+        allowfullscreen="" 
+        loading="lazy">
+      </iframe>
+    </div>
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up?
+        <br />
+        Let us know and we'll be happy to talk to you!
+      </p>
+      <address>
+        55 Main Street <br/>
+        Some Town, CA<br/>
+        12345<br/>
+        P: 555.RUN.BUDZ (555.786.2839)<br/>
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
   </section>
 
   <!-- footer -->
