--- a/index.html
+++ b/index.html
@@ -155,32 +155,30 @@
   </section>
 
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.5973018893187!2d-87.85752868523605!3d42.585069179172415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8805609e06e89f53%3A0x5ac8606e687f2b0a!2s5515%2039th%20Ave%2C%20Kenosha%2C%20WI%2053144!5e0!3m2!1sen!2sus!4v1614295714947!5m2!1sen!2sus" 
-        frameborder="0"
-        width="400" 
-        height="400" 
+        frameborder="0" 
         style="border:0;" 
         allowfullscreen="" 
         loading="lazy">
       </iframe>
-    </div>
-    <div>
-      <h3>Run Buddy</h3>
-      <p>
-        Any questions or concerns before signing up?
-        <br />
-        Let us know and we'll be happy to talk to you!
-      </p>
-      <address>
-        55 Main Street <br/>
-        Some Town, CA<br/>
-        12345<br/>
-        P: 555.RUN.BUDZ (555.786.2839)<br/>
-        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-      </address>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+          55 Main Street <br/>
+          Some Town, CA<br/>
+          12345<br/>
+          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+      </div>
     </div>
   </section>
 
