--- a/index.html
+++ b/index.html
@@ -158,11 +158,9 @@
   <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.5973018893187!2d-87.85752868523605!3d42.585069179172415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8805609e06e89f53%3A0x5ac8606e687f2b0a!2s5515%2039th%20Ave%2C%20Kenosha%2C%20WI%2053144!5e0!3m2!1sen!2sus!4v1614295714947!5m2!1sen!2sus" 
-        frameborder="0" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
+        frameborder="0" style="border:0" allowfullscreen>
       </iframe>
       <div>
         <h3>Run Buddy</h3>
@@ -172,10 +170,10 @@
           Let us know and we'll be happy to talk to you!
         </p>
         <address>
-          55 Main Street <br/>
-          Some Town, CA<br/>
-          12345<br/>
-          P: 555.RUN.BUDZ (555.786.2839)<br/>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br />
           E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
       </div>
@@ -186,7 +184,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
