add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <div class="hero-cta">
+      <h2>Start Building Habits.</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum nobis quia placeat illo provident cupiditate facere, doloribus praesentium possimus sed eligendi nemo quos tenetur, magnam expedita illum beatae ratione autem?
+      </p>
+    </div>
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
